--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -10,7 +10,8 @@
         android:id="@+id/auth"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <TextView
             android:layout_width="match_parent"
@@ -41,22 +42,21 @@
 
     <LinearLayout
         android:id="@+id/results"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0">
             <Button
-                android:id="@+id/btn_upload_video"
+                android:id="@+id/btn_list_videos"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="@string/upload_video" />
+                android:text="@string/view_videos" />
             <Button
                 android:id="@+id/btn_reset_credentials"
                 android:layout_width="0dp"
@@ -66,7 +66,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/upload_output"
+            android:id="@+id/api_output"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0"/>
@@ -77,4 +77,4 @@
             android:orientation="vertical"/>
     </LinearLayout>
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</RelativeLayout>
